--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="A web app to fetch cute dog pictures"
-    />
+    <meta name="description" content="A web app to fetch cute dog pictures" />
+    <meta name="og:title" property="og:title" content="A web app to fetch cute dog pictures">
+    <meta name="robots" content="index">
+    <meta name="keywords" content="dog,picture,image,dog image,dog picture,fetch" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
